--- a/styles/infoSection.module.css
+++ b/styles/infoSection.module.css
@@ -7,7 +7,7 @@
     height: 100%;
     
     overflow-y: auto;
-    scrollbar-width: 0;
+    scrollbar-width: none;
 }
 
 .infoSection::-webkit-scrollbar{
